// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`datasource/npm/get cover all paths 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Bearer XXX",
      "host": "test.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://test.org/none",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Bearer XXX",
      "host": "test.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://test.org/@myco%2Ftest",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Bearer XXX",
      "host": "test.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://test.org/@myco%2Ftest2",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Bearer XXX",
      "host": "test.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://test.org/error-401",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Bearer XXX",
      "host": "test.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://test.org/error-402",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Bearer XXX",
      "host": "test.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://test.org/error-404",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Bearer XXX",
      "host": "test.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://test.org/error4",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "registry.npmjs.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://registry.npmjs.org/npm-parse-error",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "registry.npmjs.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://registry.npmjs.org/npm-error-402",
  },
]
`;

exports[`datasource/npm/get has basic auth "@myco:registry=https://test.org
//test.org/:_auth=dGVzdDp0ZXN0" 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic dGVzdDp0ZXN0",
      "host": "test.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://test.org/@myco%2Ftest",
  },
]
`;

exports[`datasource/npm/get has basic auth "@myco:registry=https://test.org
_auth=dGVzdDp0ZXN0" 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic dGVzdDp0ZXN0",
      "host": "test.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://test.org/@myco%2Ftest",
  },
]
`;

exports[`datasource/npm/get has basic auth "registry=https://test.org
//test.org/:_auth=dGVzdDp0ZXN0" 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic dGVzdDp0ZXN0",
      "host": "test.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://test.org/@myco%2Ftest",
  },
]
`;

exports[`datasource/npm/get has basic auth "registry=https://test.org
//test.org/:username=test
//test.org/:_password=dGVzdA==" 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic dGVzdDp0ZXN0",
      "host": "test.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://test.org/@myco%2Ftest",
  },
]
`;

exports[`datasource/npm/get has basic auth "registry=https://test.org
_auth=dGVzdDp0ZXN0" 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic dGVzdDp0ZXN0",
      "host": "test.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://test.org/@myco%2Ftest",
  },
]
`;

exports[`datasource/npm/get has basic auth "registry=https://test.org
_auth=dGVzdDp0ZXN0" 2`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic dGVzdDp0ZXN0",
      "host": "test.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://test.org/@myco%2Ftest",
  },
]
`;

exports[`datasource/npm/get has basic auth "registry=https://test.org/sub
//test.org/:_auth=dGVzdDp0ZXN0" 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic dGVzdDp0ZXN0",
      "host": "test.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://test.org/sub/@myco%2Ftest",
  },
]
`;

exports[`datasource/npm/get has basic auth "registry=https://test.org/sub
//test.org/sub/:_auth=dGVzdDp0ZXN0" 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic dGVzdDp0ZXN0",
      "host": "test.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://test.org/sub/@myco%2Ftest",
  },
]
`;

exports[`datasource/npm/get has basic auth "registry=https://test.org/sub
_auth=dGVzdDp0ZXN0" 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic dGVzdDp0ZXN0",
      "host": "test.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://test.org/sub/@myco%2Ftest",
  },
]
`;

exports[`datasource/npm/get has bearer auth "@myco:registry=https://test.org
//test.org/:_authToken=XXX" 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Bearer XXX",
      "host": "test.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://test.org/@myco%2Ftest",
  },
]
`;

exports[`datasource/npm/get has bearer auth "registry=https://test.org
//test.org/:_authToken=XXX" 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Bearer XXX",
      "host": "test.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://test.org/@myco%2Ftest",
  },
]
`;

exports[`datasource/npm/get has bearer auth "registry=https://test.org
_authToken=XXX" 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Bearer XXX",
      "host": "test.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://test.org/@myco%2Ftest",
  },
]
`;

exports[`datasource/npm/get has bearer auth "registry=https://test.org
_authToken=XXX" 2`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Bearer XXX",
      "host": "test.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://test.org/@myco%2Ftest",
  },
]
`;

exports[`datasource/npm/get has bearer auth "registry=https://test.org/sub
//test.org/:_authToken=XXX" 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Bearer XXX",
      "host": "test.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://test.org/sub/@myco%2Ftest",
  },
]
`;

exports[`datasource/npm/get has bearer auth "registry=https://test.org/sub
//test.org/sub/:_authToken=XXX" 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Bearer XXX",
      "host": "test.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://test.org/sub/@myco%2Ftest",
  },
]
`;

exports[`datasource/npm/get has bearer auth "registry=https://test.org/sub
_authToken=XXX" 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Bearer XXX",
      "host": "test.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://test.org/sub/@myco%2Ftest",
  },
]
`;

exports[`datasource/npm/get no auth "@myco:registry=https://test.org
//test.org/sub/:_auth=dGVzdDp0ZXN0" 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "test.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://test.org/@myco%2Ftest",
  },
]
`;

exports[`datasource/npm/get no auth "@myco:registry=https://test.org
//test.org/sub/:_authToken=XXX" 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "test.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://test.org/@myco%2Ftest",
  },
]
`;

exports[`datasource/npm/get no auth "@myco:registry=https://test.org
_authToken=XXX" 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "test.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://test.org/@myco%2Ftest",
  },
]
`;

exports[`datasource/npm/get no auth "@myco:registry=https://test.org" 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "test.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://test.org/@myco%2Ftest",
  },
]
`;

exports[`datasource/npm/get no auth "registry=https://test.org" 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "test.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://test.org/@myco%2Ftest",
  },
]
`;

exports[`datasource/npm/get uses hostRules basic auth 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic dGVzdDp0ZXN0",
      "host": "test.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://test.org/@myco%2Ftest",
  },
]
`;

exports[`datasource/npm/get uses hostRules basic token auth 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Basic XXX",
      "host": "registry.npmjs.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://registry.npmjs.org/renovate",
  },
]
`;

exports[`datasource/npm/get uses hostRules token auth 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Bearer XXX",
      "host": "registry.npmjs.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://registry.npmjs.org/renovate",
  },
]
`;
